[gd_scene load_steps=26 format=4 uid="uid://bdk61kute821m"]

[ext_resource type="PackedScene" uid="uid://b73cdxs78o7tl" path="res://Objects/LevelCamera/level_camera.tscn" id="1_kjuh5"]
[ext_resource type="Script" path="res://Scenes/Levels/LevelLogic.gd" id="1_mxh4y"]
[ext_resource type="TileSet" uid="uid://dprf5unha483p" path="res://Tilemap/tileset-first-environment.tres" id="2_dyad5"]
[ext_resource type="PackedScene" uid="uid://dt6a6g78nmcxw" path="res://Objects/PrisonerCamp/prisoner_camp.tscn" id="3_oxr3t"]
[ext_resource type="PackedScene" uid="uid://bljmiqq5cc458" path="res://Objects/HomeBase/home_base.tscn" id="4_g3ihl"]
[ext_resource type="PackedScene" uid="uid://dji0dxgas7tf8" path="res://Objects/Helicopter/helicopter_player.tscn" id="5_7fywa"]
[ext_resource type="Script" path="res://Scenes/Levels/level_boundary_arrow.gd" id="6_kv5ta"]
[ext_resource type="Texture2D" uid="uid://ipodk1iihti5" path="res://GUI/turn-around-arrow.png" id="7_fai1e"]
[ext_resource type="PackedScene" uid="uid://f5v6k8edjhx" path="res://Objects/BasicAAEnemy/basic_aa_enemy.tscn" id="10_ydp4p"]
[ext_resource type="Texture2D" uid="uid://bmeth78rcq22u" path="res://Environment/bg-parallax-1.png" id="11_iucoq"]
[ext_resource type="Texture2D" uid="uid://b06bkgyf4i6oe" path="res://Environment/bg-parallax-2.png" id="12_ustn1"]
[ext_resource type="Texture2D" uid="uid://b6ptn0dsut3hp" path="res://Environment/bg-parallax-4.png" id="14_kqrlj"]
[ext_resource type="PackedScene" uid="uid://bgp4tj0awhtl1" path="res://Objects/Cloud/Cloud_Decoration.tscn" id="15_rxvsl"]
[ext_resource type="PackedScene" uid="uid://bvuhf0ad8s2uc" path="res://Objects/Bird/Bird.tscn" id="16_dwkki"]
[ext_resource type="PackedScene" uid="uid://dx3luipu6ocsy" path="res://Objects/PrisonerCampLarge/prisoner_camp_large.tscn" id="17_ofytm"]
[ext_resource type="Script" path="res://Scenes/Levels/shortcuts_for_testing.gd" id="18_jak01"]
[ext_resource type="PackedScene" uid="uid://vnqddtppw2vv" path="res://GUI/HUD/hud.tscn" id="19_4j8la"]
[ext_resource type="PackedScene" uid="uid://nngqe7qldhub" path="res://Objects/TurretSmallEnemy/turret_small_enemy.tscn" id="24_3huar"]
[ext_resource type="PackedScene" uid="uid://dhn3mqhtbi18w" path="res://Objects/SatelliteDish/SatelliteDish.tscn" id="25_gfiea"]
[ext_resource type="PackedScene" uid="uid://dbovci8t6ej4m" path="res://Scenes/LevelObjectives/LevelObjectives.tscn" id="26_10erh"]
[ext_resource type="PackedScene" uid="uid://jbtse7pfrxo2" path="res://Objects/Tank/Tank.tscn" id="26_b1gaj"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_r6scf"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_45tmy"]
normal = Vector2(-1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxaxv"]
size = Vector2(11, 119)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4wmv2"]
normal = Vector2(-1, 0)

[node name="Level1" type="Node2D"]
metadata/_edit_horizontal_guides_ = [120.0]

[node name="ShortcutsForTesting" type="Node" parent="."]
script = ExtResource("18_jak01")

[node name="Camera2D" parent="." instance=ExtResource("1_kjuh5")]

[node name="BackgroundElementGrouping" type="Node" parent="."]

[node name="BaseBackgroundLayer" type="CanvasLayer" parent="BackgroundElementGrouping"]
layer = -100

[node name="BackgroundSky" type="ColorRect" parent="BackgroundElementGrouping/BaseBackgroundLayer"]
offset_left = -1224.0
offset_top = 1.0
offset_right = 808.0
offset_bottom = 149.0
color = Color(0.768627, 0.941176, 0.760784, 1)

[node name="BackgroundParallaxLayer" type="ParallaxBackground" parent="BackgroundElementGrouping"]
layer = -50

[node name="ParallaxLayerBG" type="ParallaxLayer" parent="BackgroundElementGrouping/BackgroundParallaxLayer"]
position = Vector2(0, -8)
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(168, 0)

[node name="Sprite2D" type="Sprite2D" parent="BackgroundElementGrouping/BackgroundParallaxLayer/ParallaxLayerBG"]
texture_filter = 1
position = Vector2(0, 61)
texture = ExtResource("11_iucoq")
centered = false

[node name="ParallaxLayerBG2" type="ParallaxLayer" parent="BackgroundElementGrouping/BackgroundParallaxLayer"]
position = Vector2(0, -8)
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(159, 0)

[node name="Sprite2D" type="Sprite2D" parent="BackgroundElementGrouping/BackgroundParallaxLayer/ParallaxLayerBG2"]
texture_filter = 1
texture_repeat = 3
position = Vector2(0, 84)
texture = ExtResource("12_ustn1")
centered = false

[node name="TileBaseGround" type="TileMapLayer" parent="BackgroundElementGrouping"]
z_index = -1
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AAAAAAcAAAABAAEAAAAAAAgAAAABAAIAAAABAAcAAAABAAEAAAABAAgAAAABAAIAAAACAAcAAAABAAEAAAACAAgAAAABAAIAAAADAAcAAAABAAEAAAADAAgAAAABAAIAAAAEAAcAAAABAAEAAAAEAAgAAAABAAIAAAAFAAcAAAABAAEAAAAFAAgAAAABAAIAAAAGAAcAAAABAAEAAAAGAAgAAAABAAIAAAAHAAcAAAABAAEAAAAHAAgAAAABAAIAAAAIAAcAAAABAAEAAAAIAAgAAAABAAIAAAAJAAcAAAABAAEAAAAJAAgAAAABAAIAAAAKAAcAAAABAAEAAAAKAAgAAAABAAIAAAALAAcAAAABAAEAAAALAAgAAAABAAIAAAAMAAcAAAABAAEAAAAMAAgAAAABAAIAAAANAAcAAAABAAEAAAANAAgAAAABAAIAAAAOAAcAAAABAAEAAAAOAAgAAAABAAIAAAAPAAcAAAABAAEAAAAPAAgAAAABAAIAAAAQAAcAAAABAAEAAAAQAAgAAAABAAIAAAARAAcAAAABAAEAAAARAAgAAAABAAIAAAASAAcAAAABAAEAAAASAAgAAAABAAIAAAATAAcAAAABAAEAAAATAAgAAAABAAIAAAAUAAcAAAABAAEAAAAUAAgAAAABAAIAAAAVAAcAAAABAAEAAAAVAAgAAAABAAIAAAAWAAcAAAABAAEAAAAWAAgAAAABAAIAAAAXAAcAAAABAAEAAAAXAAgAAAABAAIAAAAYAAcAAAABAAEAAAAYAAgAAAABAAIAAAAZAAcAAAABAAEAAAAZAAgAAAABAAIAAAAaAAcAAAABAAEAAAAaAAgAAAABAAIAAAAbAAcAAAABAAEAAAAbAAgAAAABAAIAAAAcAAcAAAABAAEAAAAcAAgAAAABAAIAAAAdAAcAAAABAAEAAAAdAAgAAAABAAIAAAAeAAcAAAABAAEAAAAeAAgAAAABAAIAAAAfAAcAAAABAAEAAAAfAAgAAAABAAIAAAAgAAcAAAABAAEAAAAgAAgAAAABAAIAAAAhAAcAAAABAAEAAAAhAAgAAAABAAIAAAAiAAcAAAABAAEAAAAiAAgAAAABAAIAAAAjAAcAAAABAAEAAAAjAAgAAAABAAIAAAAkAAcAAAABAAEAAAAkAAgAAAABAAIAAAAlAAcAAAABAAEAAAAlAAgAAAABAAIAAAAmAAcAAAABAAEAAAAmAAgAAAABAAIAAAAnAAcAAAABAAEAAAAnAAgAAAABAAIAAAAoAAcAAAABAAEAAAAoAAgAAAABAAIAAAApAAcAAAABAAEAAAApAAgAAAABAAIAAAAqAAcAAAABAAEAAAAqAAgAAAABAAIAAAD//wcAAAABAAEAAAD//wgAAAABAAIAAAD+/wcAAAABAAEAAAD+/wgAAAABAAIAAAD9/wcAAAABAAEAAAD9/wgAAAABAAIAAAD8/wcAAAABAAEAAAD8/wgAAAABAAIAAAD7/wcAAAABAAEAAAD7/wgAAAABAAIAAAD6/wcAAAABAAEAAAD6/wgAAAABAAIAAAD5/wcAAAABAAEAAAD5/wgAAAABAAIAAAD4/wcAAAABAAEAAAD4/wgAAAABAAIAAAD3/wcAAAABAAEAAAD3/wgAAAABAAIAAAD2/wcAAAABAAEAAAD2/wgAAAABAAIAAAD1/wcAAAABAAEAAAD1/wgAAAABAAIAAAD0/wcAAAABAAEAAAD0/wgAAAABAAIAAADz/wcAAAABAAEAAADz/wgAAAABAAIAAADy/wcAAAABAAEAAADy/wgAAAABAAIAAADx/wcAAAABAAEAAADx/wgAAAABAAIAAADw/wcAAAABAAEAAADw/wgAAAABAAIAAADv/wcAAAABAAEAAADv/wgAAAABAAIAAADu/wcAAAABAAEAAADu/wgAAAABAAIAAADt/wcAAAABAAEAAADt/wgAAAABAAIAAADs/wcAAAABAAEAAADs/wgAAAABAAIAAADr/wcAAAABAAEAAADr/wgAAAABAAIAAADq/wcAAAABAAEAAADq/wgAAAABAAIAAADp/wcAAAABAAEAAADp/wgAAAABAAIAAADo/wcAAAABAAEAAADo/wgAAAABAAIAAADn/wcAAAABAAEAAADn/wgAAAABAAIAAADm/wcAAAABAAEAAADm/wgAAAABAAIAAADl/wcAAAABAAEAAADl/wgAAAABAAIAAADk/wcAAAABAAEAAADk/wgAAAABAAIAAADj/wcAAAABAAEAAADj/wgAAAABAAIAAADi/wcAAAABAAEAAADi/wgAAAABAAIAAADh/wcAAAABAAEAAADh/wgAAAABAAIAAADg/wcAAAABAAEAAADg/wgAAAABAAIAAADf/wcAAAABAAEAAADf/wgAAAABAAIAAADe/wcAAAABAAEAAADe/wgAAAABAAIAAADd/wcAAAABAAEAAADd/wgAAAABAAIAAADc/wcAAAABAAEAAADc/wgAAAABAAIAAADb/wcAAAABAAEAAADb/wgAAAABAAIAAADa/wcAAAABAAEAAADa/wgAAAABAAIAAADZ/wcAAAABAAEAAADZ/wgAAAABAAIAAADY/wcAAAABAAEAAADY/wgAAAABAAIAAADX/wcAAAABAAEAAADX/wgAAAABAAIAAADW/wcAAAABAAEAAADW/wgAAAABAAIAAADV/wcAAAABAAEAAADV/wgAAAABAAIAAADU/wcAAAABAAEAAADU/wgAAAABAAIAAADT/wcAAAABAAEAAADT/wgAAAABAAIAAADS/wcAAAABAAEAAADS/wgAAAABAAIAAADR/wcAAAABAAEAAADR/wgAAAABAAIAAADQ/wcAAAABAAEAAADQ/wgAAAABAAIAAADP/wcAAAABAAEAAADP/wgAAAABAAIAAADO/wcAAAABAAEAAADO/wgAAAABAAIAAADN/wcAAAABAAEAAADN/wgAAAABAAIAAADM/wcAAAABAAEAAADM/wgAAAABAAIAAADL/wcAAAABAAEAAADL/wgAAAABAAIAAADK/wcAAAABAAEAAADK/wgAAAABAAIAAADJ/wcAAAABAAEAAADJ/wgAAAABAAIAAADI/wcAAAABAAEAAADI/wgAAAABAAIAAADH/wcAAAABAAEAAADH/wgAAAABAAIAAADG/wcAAAABAAEAAADG/wgAAAABAAIAAADF/wcAAAABAAEAAADF/wgAAAABAAIAAADE/wcAAAABAAEAAADE/wgAAAABAAIAAADD/wcAAAABAAEAAADD/wgAAAABAAIAAADC/wcAAAABAAEAAADC/wgAAAABAAIAAADB/wcAAAABAAEAAADB/wgAAAABAAIAAADA/wcAAAABAAEAAADA/wgAAAABAAIAAAC//wcAAAABAAEAAAC//wgAAAABAAIAAAC+/wcAAAABAAEAAAC+/wgAAAABAAIAAAC9/wcAAAABAAEAAAC9/wgAAAABAAIAAAC8/wcAAAABAAEAAAC8/wgAAAABAAIAAAC7/wcAAAABAAEAAAC7/wgAAAABAAIAAAC6/wcAAAABAAEAAAC6/wgAAAABAAIAAAC5/wcAAAABAAEAAAC5/wgAAAABAAIAAAC4/wcAAAABAAEAAAC4/wgAAAABAAIAAAARAAUAAAAEAAEAAAASAAUAAAAEAAEAAAATAAUAAAAFAAEAAAAQAAUAAAADAAEAAAAPAAYAAAADAAEAAAAUAAYAAAAFAAEAAAAQAAYAAAAEAAIAAAARAAYAAAAEAAIAAAASAAYAAAAEAAIAAAATAAYAAAAEAAIAAADM/wMAAAAEAAEAAADI/wYAAAADAAEAAADJ/wUAAAADAAEAAADK/wQAAAADAAEAAADL/wMAAAADAAEAAADR/wYAAAAFAAEAAADQ/wUAAAAFAAEAAADP/wQAAAAFAAEAAADO/wMAAAAFAAEAAADN/wMAAAAEAAEAAADL/wQAAAAEAAIAAADM/wQAAAAEAAIAAADN/wQAAAAEAAIAAADO/wQAAAAEAAIAAADO/wUAAAAEAAIAAADP/wUAAAAEAAIAAADN/wUAAAAEAAIAAADM/wUAAAAEAAIAAADL/wUAAAAEAAIAAADK/wUAAAAEAAIAAADK/wYAAAAEAAIAAADJ/wYAAAAEAAIAAADL/wYAAAAEAAIAAADM/wYAAAAEAAIAAADN/wYAAAAEAAIAAADO/wYAAAAEAAIAAADP/wYAAAAEAAIAAADQ/wYAAAAEAAIAAAArAAcAAAABAAEAAAArAAgAAAABAAIAAAAsAAcAAAABAAEAAAAsAAgAAAABAAIAAAAtAAcAAAABAAEAAAAtAAgAAAABAAIAAAAuAAcAAAABAAEAAAAuAAgAAAABAAIAAAAvAAcAAAABAAEAAAAvAAgAAAABAAIAAAAwAAcAAAABAAEAAAAwAAgAAAABAAIAAAC3/wcAAAABAAEAAAC3/wgAAAABAAIAAAC2/wcAAAABAAEAAAC2/wgAAAABAAIAAAC1/wcAAAABAAEAAAC1/wgAAAABAAIAAAC0/wcAAAABAAEAAAC0/wgAAAABAAIAAACz/wcAAAABAAEAAACz/wgAAAABAAIAAACy/wcAAAABAAEAAACy/wgAAAABAAIAAAA=")
tile_set = ExtResource("2_dyad5")

[node name="TileGroundDecorations" type="TileMapLayer" parent="BackgroundElementGrouping"]
z_index = -1
position = Vector2(0, -8.225)
tile_map_data = PackedByteArray("AAAWAAcAAAABAAUAAAAFAAcAAAABAAUAAAAGAAcAAAACAAUAAAAAAAcAAAABAAUAAAABAAcAAAACAAUAAADu/wcAAAABAAUAAADv/wcAAAACAAUAAADf/wcAAAABAAUAAADg/wcAAAACAAUAAAC8/wcAAAABAAUAAAC9/wcAAAACAAUAAAAoAAcAAAABAAUAAAApAAcAAAACAAUAAAAMAAYAAAABAAMAAAAMAAcAAAABAAQAAAANAAYAAAACAAMAAAANAAcAAAACAAQAAAArAAYAAAABAAMAAAArAAcAAAABAAQAAAAsAAYAAAACAAMAAAAsAAcAAAACAAQAAAADAAYAAAABAAMAAAADAAcAAAABAAQAAAAEAAYAAAACAAMAAAAEAAcAAAACAAQAAAD9/wYAAAABAAMAAAD9/wcAAAABAAQAAAD+/wYAAAACAAMAAAD+/wcAAAACAAQAAAD1/wYAAAABAAMAAAD1/wcAAAABAAQAAAD2/wYAAAACAAMAAAD2/wcAAAACAAQAAADq/wYAAAABAAMAAADq/wcAAAABAAQAAADr/wYAAAACAAMAAADr/wcAAAACAAQAAADi/wYAAAABAAMAAADi/wcAAAABAAQAAADj/wYAAAACAAMAAADj/wcAAAACAAQAAADZ/wYAAAABAAMAAADZ/wcAAAABAAQAAADa/wYAAAACAAMAAADa/wcAAAACAAQAAADF/wYAAAABAAMAAADF/wcAAAABAAQAAADG/wYAAAACAAMAAADG/wcAAAACAAQAAAC3/wYAAAABAAMAAAC3/wcAAAABAAQAAAC4/wYAAAACAAMAAAC4/wcAAAACAAQAAADD/wgAAAADAAQAAADP/wkAAAADAAQAAADY/wgAAAADAAQAAADi/wgAAAADAAQAAADw/wgAAAADAAQAAAD+/wgAAAADAAQAAAAUAAgAAAADAAQAAAAhAAgAAAADAAQAAAA=")
tile_set = ExtResource("2_dyad5")

[node name="CommonLevelLogic" type="Node" parent="."]
script = ExtResource("1_mxh4y")
min_prisoners_required_for_success = 12

[node name="LevelBoundary" type="Node2D" parent="."]

[node name="Ceiling" type="StaticBody2D" parent="LevelBoundary"]
position = Vector2(187, 21)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundary/Ceiling"]
shape = SubResource("WorldBoundaryShape2D_r6scf")

[node name="RightBoundary" type="StaticBody2D" parent="LevelBoundary"]
position = Vector2(675, 68)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundary/RightBoundary"]
shape = SubResource("WorldBoundaryShape2D_45tmy")

[node name="TurnAroundIndicator" type="Area2D" parent="LevelBoundary/RightBoundary"]
script = ExtResource("6_kv5ta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundary/RightBoundary/TurnAroundIndicator"]
position = Vector2(-7.5, -8)
shape = SubResource("RectangleShape2D_wxaxv")

[node name="Arrow" type="Sprite2D" parent="LevelBoundary/RightBoundary/TurnAroundIndicator"]
position = Vector2(23, -4)
texture = ExtResource("7_fai1e")

[node name="BlinkTimer" type="Timer" parent="LevelBoundary/RightBoundary/TurnAroundIndicator"]

[node name="LeftBoundary" type="StaticBody2D" parent="LevelBoundary"]
position = Vector2(-1119, 53)
rotation = -3.14159
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundary/LeftBoundary"]
shape = SubResource("WorldBoundaryShape2D_4wmv2")

[node name="TurnAroundIndicator" type="Area2D" parent="LevelBoundary/LeftBoundary"]
script = ExtResource("6_kv5ta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundary/LeftBoundary/TurnAroundIndicator"]
position = Vector2(-7.5, -7.49999)
shape = SubResource("RectangleShape2D_wxaxv")

[node name="Arrow" type="Sprite2D" parent="LevelBoundary/LeftBoundary/TurnAroundIndicator"]
position = Vector2(23, -4)
texture = ExtResource("7_fai1e")

[node name="BlinkTimer" type="Timer" parent="LevelBoundary/LeftBoundary/TurnAroundIndicator"]

[node name="PrisonerCamp" parent="." groups=["PrisonerCamp"] instance=ExtResource("3_oxr3t")]
position = Vector2(141, 121)

[node name="PrisonerCamp3" parent="." groups=["PrisonerCamp"] instance=ExtResource("3_oxr3t")]
position = Vector2(-92, 121)
prisoners_held_captive = 3

[node name="PrisonerCamp5" parent="." groups=["PrisonerCamp"] instance=ExtResource("3_oxr3t")]
position = Vector2(-691, 121)

[node name="PrisonerCamp2" parent="." groups=["PrisonerCamp"] instance=ExtResource("3_oxr3t")]
position = Vector2(-1018, 121)

[node name="HomeBase" parent="." instance=ExtResource("4_g3ihl")]
position = Vector2(471, 123)

[node name="BasicAAEnemy" parent="." instance=ExtResource("10_ydp4p")]
position = Vector2(-53, 117)

[node name="BasicAAEnemy3" parent="." instance=ExtResource("10_ydp4p")]
position = Vector2(-654, 117)

[node name="BasicAAEnemy2" parent="." instance=ExtResource("10_ydp4p")]
position = Vector2(-966, 117)

[node name="HUD" parent="." instance=ExtResource("19_4j8la")]

[node name="LevelObjectives" parent="." instance=ExtResource("26_10erh")]
visible = false

[node name="PrisonerCampLarge" parent="." instance=ExtResource("17_ofytm")]
position = Vector2(-401, 119)
prisoners_held_captive = 3

[node name="TurretSmallEnemy" parent="." instance=ExtResource("24_3huar")]
position = Vector2(-1011, 75)

[node name="TurretSmallEnemy4" parent="." instance=ExtResource("24_3huar")]
position = Vector2(-1024, 75)

[node name="SatelliteDish" parent="." instance=ExtResource("25_gfiea")]
position = Vector2(-100, 61)

[node name="Tank2" parent="." instance=ExtResource("26_b1gaj")]
position = Vector2(-564, 127)

[node name="TurretSmallEnemy2" parent="." instance=ExtResource("24_3huar")]
position = Vector2(-401, 59)

[node name="TurretSmallEnemy3" parent="." instance=ExtResource("24_3huar")]
position = Vector2(-690, 74)

[node name="Helicopter_Player" parent="." instance=ExtResource("5_7fywa")]
position = Vector2(476, 114)

[node name="Decorations" type="Node2D" parent="."]

[node name="CloudDecoration" parent="Decorations" instance=ExtResource("15_rxvsl")]
position = Vector2(343, 31)

[node name="CloudDecoration3" parent="Decorations" instance=ExtResource("15_rxvsl")]
position = Vector2(-269, 31)

[node name="CloudDecoration4" parent="Decorations" instance=ExtResource("15_rxvsl")]
position = Vector2(-497, 31)

[node name="CloudDecoration2" parent="Decorations" instance=ExtResource("15_rxvsl")]
position = Vector2(-881, 17)

[node name="Bird" parent="Decorations" instance=ExtResource("16_dwkki")]
position = Vector2(223, 37)

[node name="Bird3" parent="Decorations" instance=ExtResource("16_dwkki")]
position = Vector2(-58, 38)

[node name="Bird4" parent="Decorations" instance=ExtResource("16_dwkki")]
position = Vector2(-323, 45)

[node name="Bird5" parent="Decorations" instance=ExtResource("16_dwkki")]
position = Vector2(-556, 45)

[node name="Bird2" parent="Decorations" instance=ExtResource("16_dwkki")]
position = Vector2(499, 31)

[node name="ForegroundParallaxLayer" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayerFG" type="ParallaxLayer" parent="ForegroundParallaxLayer"]
position = Vector2(0, 136)
motion_scale = Vector2(1.4, 1.4)
motion_mirroring = Vector2(158, 0)

[node name="Sprite2D" type="Sprite2D" parent="ForegroundParallaxLayer/ParallaxLayerFG"]
texture_filter = 1
texture = ExtResource("14_kqrlj")
centered = false
